--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,14 +2,15 @@ Package: PRRDetect
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person(Giuseppe, Rinaldi, , "gr454@cam.ac.uk", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-5650-6049"))
+Description: Computes PRRDetect score 
+License: 
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Import: 
+  Variant Annotation
 Remotes:
   xqzou/indelsig.tools.lib
   Nik-Zainal-Group/signature.tools.lib
