--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: PRRDetect
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person(Giuseppe, Rinaldi, , "gr454@cam.ac.uk", role = c("aut", "cre"),
+    person("Giuseppe", "Rinaldi", , "gr454@cam.ac.uk", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-5650-6049"))
 Description: Computes PRRDetect score 
 License: 
